# evmone

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  circle.yml  eip-7708-update-proposal.md
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/_3rdParty/Hunter/: install-root-dir
_codeql_build_dir/evmc/: Makefile  cmake_install.cmake  evmcConfigVersion.cmake
_codeql_build_dir/evmc/lib/: Makefile  cmake_install.cmake
_codeql_build_dir/lib/: Makefile  cmake_install.cmake  libevmone.so.0.18  libevmone.so.0.18.0
_codeql_build_dir/lib/evmmax/: Makefile  cmake_install.cmake
_codeql_build_dir/lib/evmone/: Makefile  cmake_install.cmake
_codeql_build_dir/lib/evmone_precompiles/: Makefile  cmake_install.cmake
coverage-annotator/: .gitignore  README.md  pyproject.toml
coverage-annotator/src/coverage_annotator/: add_annotations_to_coverage_html.py
docs/: amsterdam_remaining_work.md
include/evmmax/: evmmax.hpp
lib/evmone/: CMakeLists.txt  advanced_analysis.hpp  advanced_execution.cpp  advanced_instructions.cpp  baseline.hpp  baseline_execution.cpp  caterpillar.cpp  constants.hpp  create_address.hpp  delegation.cpp  delegation.hpp  execution_state.hpp  instructions.hpp  instructions_calls.cpp  instructions_storage.cpp  instructions_traits.hpp  state_gas.hpp  vm.cpp
lib/evmone_precompiles/: bls.cpp  bls.hpp  bn254.cpp  bn254.hpp  ecc.hpp  kzg.cpp  kzg_setup_g2_1_lines.cpp  kzg_setup_g2_1_lines.hpp  modexp.cpp  mul_mont.cpp  secp256k1.cpp  secp256k1.hpp  secp256r1.cpp  secp256r1.hpp
reports/coverage_eest_osaka/: coverage.lcov  report.txt
reports/coverage_eest_wip_annotated/: coverage.lcov  report.txt
test/: CMakeLists.txt
test/bench/: bench.cpp  helpers.hpp
test/blockchaintest/: blockchaintest.cpp  blockchaintest.hpp  blockchaintest_loader.cpp  blockchaintest_runner.cpp
test/fuzzer/: fuzzer.cpp
test/integration/: CMakeLists.txt
test/integration/blockchaintest/: eip7778_block_gas.json
test/integration/t8n/: CMakeLists.txt
test/integration/t8n/osaka_blob_schedule/: blobSchedule.json
test/precompiles_bench/: precompiles_bench.cpp
test/state/: CMakeLists.txt  account.hpp  bal.cpp  bal.hpp  blob_schedule.cpp  blob_schedule.hpp  block.cpp  block.hpp  bloom_filter.cpp  errors.hpp  host.cpp  host.hpp  precompiles.cpp  precompiles_libsecp256k1.cpp  precompiles_libsecp256k1.hpp  requests.cpp  requests.hpp  rlp_common.hpp  rlp_decode.cpp  rlp_decode.hpp  state.cpp  state.hpp  system_contracts.cpp  system_contracts.hpp  test_state.hpp  transaction.cpp  transaction.hpp
test/statetest/: statetest.cpp  statetest.hpp  statetest_loader.cpp  statetest_runner.cpp
test/t8n/: t8n.cpp
test/unittests/: CMakeLists.txt  analysis_test.cpp  crypto_wnaf.cpp  engine_test_loader_test.cpp  engine_test_runner_test.cpp  evm_calls_test.cpp  evm_eip3860_initcode_test.cpp  evm_eip7843_slotnum_test.cpp  evm_eip8024_swapn_dupn_exchange_test.cpp  evm_eip8024_test.cpp  evm_other_test.cpp  evm_storage_test.cpp  evmmax_bn254_add_test.cpp  evmmax_bn254_mul_test.cpp  evmmax_bn254_pairing_test.cpp  evmmax_secp256k1_test.cpp  evmmax_test.cpp  evmone_test.cpp  execution_state_test.cpp  instructions_test.cpp  precompiles_expmod_test.cpp  precompiles_kzg_test.cpp  precompiles_secp256r1_test.cpp  state_block_test.cpp  state_gas_test.cpp  state_rlp_decode_test.cpp  state_rlp_test.cpp  state_transition.cpp  state_transition.hpp  state_transition_block_test.cpp  state_transition_call_test.cpp  state_transition_create_test.cpp  state_transition_eip7610_test.cpp  state_transition_eip7702_test.cpp  state_transition_eip7778_block_gas_test.cpp  state_transition_eip8037_test.cpp  state_transition_eof_create_test.cpp  state_transition_extcode_test.cpp  state_transition_selfdestruct_test.cpp  state_transition_tx_test.cpp  (+4 more)
test/utils/: CMakeLists.txt  block_transition.cpp  block_transition.hpp  blockchaintest.hpp  blockchaintest_loader.cpp  bytecode.hpp  engine_test.hpp  engine_test_loader.cpp  engine_test_runner.cpp  rlp.cpp  rlp.hpp  rlp_decode.cpp  rlp_decode.hpp  rlp_encode.cpp  statetest.hpp  statetest_export.cpp  statetest_loader.cpp  t8n.cpp  t8n.hpp  test_state.cpp  test_state.hpp
tools/evmone/: CMakeLists.txt  main.cpp
(+140 files in other folders)
